upload all files

--- a/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer/index.html
+++ b/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer/index.html
@@ -627,16 +627,16 @@
       maint_meq: "ค่า MEQ: เป้าหมาย 27–33 ไทเทรตด้วย KOH 0.1 โมล หากต้องการเพิ่ม 1 หน่วย เติมสเตบิไลเซอร์ 0.1 ซีซีต่อลิตร ค่าสูงเกินให้กรองยูเอฟ ค่าต่ำให้ปรับด้วยอีมัลชันสเตบิไลเซอร์",
 
       equip_h: "อุปกรณ์ที่จำเป็น",
-      equip_tank: "บ่อแลคเกอร์: วัสดุ PP หรือ PVC พร้อมระบบกวนน้ำยา",
-      equip_pump: "ปั๊มกวนน้ำยา: อัตราหมุนเวียนมากกว่า 5 เท่าของปริมาตรบ่อต่อชั่วโมง พร้อมไส้กรอง 1–3 ไมโครเมตร",
-      equip_anode: "แผ่นตัวล่อ: สแตนเลสเกรด 316",
-      equip_uf: "เครื่องกรองอัลตร้าฟิลเตอร์: ใช้ควบคุมค่าการนำไฟฟ้าและคุณภาพน้ำยา",
-      equip_ps: "ตู้ไฟ: ปรับแรงดันได้สูงสุด 60 โวลต์",
-      equip_oven: "ตู้อบงาน: สำหรับการอบหลังชุบ",
+      equip_tank: "บ่อแลคเกอร์: บ่อที่ใช้ควรทำจากวัสดุพลาสติกที่ทนทานต่อสารเคมี เช่น PP (Polypropylene) หรือ PVC (Polyvinyl chloride) เพื่อป้องกันการกัดกร่อนจากน้ำยา. บ่อควรมีระบบกวนน้ำยาในตัวเพื่อป้องกันไม่ให้สารแลคเกอร์ตกตะกอนและเพื่อให้ความเข้มข้นของน้ำยาสม่ำเสมอทั่วทั้งบ่อ",
+      equip_pump: "ปั๊มกวนน้ำยา: ปั๊มที่มีอัตราการหมุนเวียนสูง (มากกว่า 5 เท่าของปริมาตรบ่อต่อชั่วโมง) เป็นสิ่งจำเป็น. ควรมีการติดตั้ง ไส้กรองขนาด 1–3 ไมโครเมตร เพื่อกำจัดสิ่งเจือปนที่ลอยอยู่ในน้ำยา ซึ่งจะช่วยลดโอกาสที่ฟิล์มแลคเกอร์จะเป็นจุดหรือมีสิ่งสกปรกติดอยู่",
+      equip_anode: "แผ่นตัวล่อ (Anode): ใช้ แผ่นสแตนเลสเกรด 316 เป็นตัวล่อหรือขั้วแอโนด. แผ่นตัวล่อเหล่านี้ทำหน้าที่ปล่อยประจุไฟฟ้าเพื่อดึงดูดอนุภาคแลคเกอร์ไปเคลือบที่ชิ้นงาน (แคโทด) การใช้เกรดสแตนเลสที่เหมาะสมจะช่วยลดการปนเปื้อนของโลหะลงในบ่อได้",
+      equip_uf: "เครื่องกรองอัลตร้าฟิลเตอร์ (Ultra-filter): อุปกรณ์นี้มีความสำคัญอย่างยิ่งในการควบคุมคุณภาพของน้ำยา. เครื่องกรองอัลตร้าฟิลเตอร์จะช่วย ควบคุมค่าการนำไฟฟ้า ของน้ำยาให้อยู่ในระดับที่เหมาะสมและกำจัดสิ่งสกปรกที่ละลายอยู่ในสารละลาย ซึ่งจะช่วยให้ฟิล์มแลคเกอร์ที่ได้มีความใสและเงางาม",
+      equip_ps: "ตู้ไฟ: ใช้ ตู้ไฟที่สามารถปรับแรงดันได้สูงสุด 60 โวลต์ เพื่อควบคุมความหนาของชั้นแลคเกอร์. การควบคุมแรงดันไฟฟ้าที่แม่นยำจะช่วยให้ได้ความหนาของฟิล์มตามที่ต้องการและลดการเกิดข้อบกพร่องที่เกิดจากการจ่ายไฟที่ไม่คงที่",
+      equip_oven: "ตู้อบงาน: หลังจากชิ้นงานถูกเคลือบด้วยแลคเกอร์แล้ว จะต้องนำไป อบในตู้อบ เพื่อให้ฟิล์มแลคเกอร์แข็งตัวและเกาะติดกับผิวชิ้นงานอย่างสมบูรณ์. การอบนี้เป็นขั้นตอนสุดท้ายที่ทำให้ฟิล์มมีความทนทานต่อการขีดข่วนและการสึกหรอ",
 
       add_h: "สารเคมีที่ใช้ในการปรับปรุง",
-      add_flow: "โฟลว์แอดดิทีฟ: รักษาสมดุลส่วนผสม เป้าหมายรวม 3–4 เปอร์เซ็นต์ ของระบบตามคู่มือ",
-      add_stab: "สเตบิไลเซอร์: ใช้เป็นครั้งคราวเพื่อคุม pH และ MEQ ปกติเติม 0.2–0.3 ซีซีต่อลิตรเมื่อจำเป็น",
+      add_flow: "Flow additive: รักษาสมดุลส่วนผสม เป้าหมายรวม 3–4 เปอร์เซ็นต์ ของระบบตามคู่มือ",
+      add_stab: "Stabilizer: ใช้เป็นครั้งคราวเพื่อคุม pH และ MEQ ปกติเติม 0.2–0.3 ซีซีต่อลิตรเมื่อจำเป็น",
 
         ft_addr_1:"📍 31 ซอย เพชรเกษม 48 แยก 24 แขวง บางแวก",
         ft_addr_2:"📍 เขต ภาษีเจริญ กรุงเทพมหานคร 10160",
