--- a/products/protective/anti-tarnish-bu-20.html
+++ b/products/protective/anti-tarnish-bu-20.html
@@ -235,10 +235,8 @@
       <nav id="toc" class="reveal" aria-label="สารบัญ">
         <h2 class="section" data-i18n-key="toc_title">สารบัญ</h2>
         <p>
-          <a class="toc-chip" href="#features" data-i18n-key="toc_features">จุดเด่น</a>
           <a class="toc-chip" href="#specs" data-i18n-key="toc_specs">สเปก &amp; หน้าต่างการทำงาน</a>
           <a class="toc-chip" href="#makeup" data-i18n-key="toc_makeup">ตัวอย่างการผสม</a>
-          <a class="toc-chip" href="#electrodes" data-i18n-key="toc_electrodes">ขั้วไฟฟ้า &amp; การต่อวงจร</a>
           <a class="toc-chip" href="#process" data-i18n-key="toc_process">ขั้นตอนการทำงาน</a>
           <a class="toc-chip" href="#maint" data-i18n-key="toc_maint">การปรับเติม</a>
           <a class="toc-chip" href="#safety" data-i18n-key="toc_safety">ความปลอดภัย</a>
@@ -337,65 +335,104 @@
         </div>
       </section>
 
-      <!-- Make-up example -->
-      <section id="makeup" class="reveal section-block" aria-labelledby="makeup-h">
-        <h2 id="makeup-h" class="section" data-i18n-key="makeup_h">ตัวอย่างการผสม</h2>
-        <div class="content">
-          <ul>
-            <li data-i18n-key="mk_s1">เติมน้ำลงถัง <strong>~50%</strong> ของปริมาตรรวม</li>
-            <li data-i18n-key="mk_s2">อุ่นน้ำให้ถึง <strong>~35 °C</strong> และกวนสม่ำเสมอ</li>
-            <li data-i18n-key="mk_s3">เติม <strong>BU-20</strong> ช้า ๆ ตามอัตราส่วนจนละลายดี</li>
-            <li data-i18n-key="mk_s4">เติมน้ำให้ถึงระดับปฏิบัติการ กวนจนใสสม่ำเสมอ</li>
-          </ul>
-        </div>
-      </section>
+<!-- Make-up example -->
+<section id="makeup" class="reveal section-block" aria-labelledby="makeup-h">
+  <h2 id="makeup-h" class="section" data-i18n-key="bu20_makeup_h">ตัวอย่างการผสม</h2>
+  <div class="content">
+    <ul>
+      <li data-i18n-key="bu20_mk_s1">เติมน้ำลงถัง <strong>~50%</strong> ของปริมาตรรวม</li>
+      <li data-i18n-key="bu20_mk_s2">อุ่นน้ำให้ถึง <strong>~35 °C</strong> และกวนสม่ำเสมอ</li>
+      <li data-i18n-key="bu20_mk_s3">ค่อย ๆ เติม <strong>BU-20</strong> ตามอัตราส่วนที่แนะนำลงไปจนละลายดี</li>
+      <li data-i18n-key="bu20_mk_s4">เติมน้ำให้ถึงระดับปฏิบัติการ กวนจนสารละลายใสสม่ำเสมอ</li>
+    </ul>
+  </div>
+</section>
 
-      <!-- Electrodes & wiring -->
-      <section id="electrodes" class="reveal section-block" aria-labelledby="electrodes-h">
-        <h2 id="electrodes-h" class="section" data-i18n-key="electrodes_h">ขั้วไฟฟ้า &amp; การต่อวงจร</h2>
-        <div class="content">
-          <ul>
-            <li data-i18n-key="el_1"><strong>แอโนด:</strong> แผ่นสแตนเลส ทำความสะอาดก่อนใช้งาน</li>
-            <li data-i18n-key="el_2"><strong>การต่อ:</strong> ต่อขั้วตามคู่มือไลน์ BU-20 เพื่อให้ได้ฟิล์มสม่ำเสมอและคุมความหนา</li>
-            <li data-i18n-key="el_3"><strong>การกวน:</strong> กวนเบาหรือไหลเวียนเพื่อเสถียรภาพของฟิล์ม</li>
-            <li data-i18n-key="el_4"><strong>หน้าสัมผัส:</strong> ราว/ตะขอสะอาด ไม่มีออกไซด์ เพื่อความเสถียรของกระแส</li>
-          </ul>
-        </div>
-      </section>
+<!-- Electrodes & wiring -->
+<section id="electrodes" class="reveal section-block" aria-labelledby="electrodes-h">
+  <h2 id="electrodes-h" class="section" data-i18n-key="bu20_electrodes_h">ขั้วไฟฟ้า & การต่อวงจร</h2>
+  <div class="content">
+    <ul>
+      <li data-i18n-key="bu20_el_1"><strong>แอโนด (+):</strong> ใช้แผ่นสแตนเลส และทำความสะอาดก่อนใช้งาน</li>
+      <li data-i18n-key="bu20_el_2"><strong>การต่อวงจร:</strong> เชื่อมต่อวงจรตามคู่มือไลน์ BU-20 เพื่อให้ได้ฟิล์มสม่ำเสมอและคุมความหนา</li>
+      <li data-i18n-key="bu20_el_3"><strong>การกวน:</strong> ใช้การกวนเบา ๆ หรือไหลเวียนเพื่อเสถียรภาพของฟิล์ม</li>
+      <li data-i18n-key="bu20_el_4"><strong>หน้าสัมผัส:</strong> ราว/ตะขอสะอาด ปราศจากออกไซด์ เพื่อความเสถียรของกระแส</li>
+    </ul>
+  </div>
+</section>
 
-      <!-- Process -->
-      <section id="process" class="reveal section-block" aria-labelledby="process-h">
-        <h2 id="process-h" class="section" data-i18n-key="process_h">ขั้นตอนการทำงาน</h2>
-        <div class="content">
-          <ol>
-            <li data-i18n-key="proc_1">เตรียมผิว: ขจัดไขมัน/ล้างสะอาด</li>
-            <li data-i18n-key="proc_2">จุ่มในอ่าง <strong>BU-20</strong></li>
-            <li data-i18n-key="proc_3">จ่ายไฟให้ได้ <strong>0.1–0.5 A/dm²</strong> เป็นเวลา <strong>30–120 s</strong></li>
-            <li data-i18n-key="proc_4">นำขึ้นและ <strong>เป่าลม/อบอุ่นให้แห้ง</strong> เพื่อผลไล่น้ำที่ดี</li>
-          </ol>
-        </div>
-      </section>
+<!-- Process -->
+<section id="process" class="reveal section-block" aria-labelledby="process-h">
+  <h2 id="process-h" class="section" data-i18n-key="bu20_process_h">ขั้นตอนการทำงาน</h2>
+  <div class="content">
+    <ol>
+      <li data-i18n-key="bu20_proc_1">เตรียมผิว: ชิ้นงานต้องผ่านการขจัดไขมันและล้างจนสะอาด</li>
+      <li data-i18n-key="bu20_proc_2">จุ่มชิ้นงานลงในอ่าง <strong>BU-20</strong></li>
+      <li data-i18n-key="bu20_proc_3">จ่ายไฟให้ได้ <strong>0.1–0.5 A/dm²</strong> เป็นเวลา <strong>30–120 วินาที</strong> (ควบคุมให้คงที่)</li>
+      <li data-i18n-key="bu20_proc_4">นำขึ้นและ <strong>เป่าลม/อบอุ่นให้แห้ง</strong> เพื่อผลไล่น้ำที่ดีและฟิล์มสวยสม่ำเสมอ</li>
+    </ol>
+  </div>
+</section>
 
-      <!-- Maintenance / Replenishment -->
-      <section id="maint" class="reveal section-block" aria-labelledby="maint-h">
-        <h2 id="maint-h" class="section" data-i18n-key="maint_h">การปรับเติม (Replenishment)</h2>
-        <div class="content">
-          <p data-i18n-key="maint_p1">หลัง Make-up ใหม่ใช้งานที่ <strong>8–12% v/v</strong> (80–120 cc/L). น้ำยาจะเจือจางจากการลากออก (drag-out) — ไม่สามารถกู้กลับจาก drag-out ได้</p>
-          <p data-i18n-key="maint_p2"><strong>อัตราปรับเติม:</strong> โดยแนวทาง <strong>เติม BU-20 1 ลิตร</strong> ต่อพื้นที่งานที่ผ่านบ่อ <strong>~2,000 dm² (≈ 20 m²)</strong> เพื่อคงคุณภาพฟิล์ม</p>
-        </div>
-      </section>
+<!-- Maintenance / Replenishment -->
+<section id="maint" class="reveal section-block" aria-labelledby="maint-h">
+  <h2 id="maint-h" class="section" data-i18n-key="bu20_maint_h">การปรับเติม (Replenishment)</h2>
+  <div class="content">
+    <p data-i18n-key="bu20_maint_p1">หลัง Make-up ใหม่ ให้ใช้งานที่ <strong>8–12% v/v</strong> (80–120 cc/L) น้ำยาจะเจือจางจากการลากออก (drag-out) — ไม่สามารถกู้กลับจาก drag-out ได้</p>
+    <p data-i18n-key="bu20_maint_p2"><strong>อัตราปรับเติม:</strong> แนวทางคือ <strong>เติม BU-20 1 ลิตร</strong> ต่อพื้นที่งานที่ผ่านบ่อ <strong>~2,000 dm² (≈ 20 m²)</strong> เพื่อคงคุณภาพฟิล์ม</p>
+  </div>
+</section>
 
-      <!-- Safety -->
-      <section id="safety" class="reveal section-block" aria-labelledby="safety-h">
-        <h2 id="safety-h" class="section" data-i18n-key="safety_h">ความปลอดภัย &amp; สิ่งแวดล้อม</h2>
-        <div class="content">
-          <ul>
-            <li data-i18n-key="safe_1">สวม PPE (ถุงมือกันสารเคมี/แว่น/หน้ากากที่เหมาะสม) และทำงานในที่อากาศถ่ายเท</li>
-            <li data-i18n-key="safe_2">ควบคุมกระแส/เวลาในช่วงที่กำหนด ป้องกันความร้อนสะสมที่ไม่จำเป็น</li>
-            <li data-i18n-key="safe_3">จัดการน้ำทิ้ง/ตะกอนตามข้อกำหนดท้องถิ่นด้วยผู้รับกำจัดที่ได้รับอนุญาต</li>
-          </ul>
-        </div>
-      </section>
+<!-- Safety -->
+<section id="safety" class="reveal section-block" aria-labelledby="safety-h">
+  <h2 id="safety-h" class="section" data-i18n-key="bu20_safety_h">ความปลอดภัย &amp; สิ่งแวดล้อม</h2>
+  <div class="content">
+    <ul>
+      <li data-i18n-key="bu20_safe_1">สวม PPE (ถุงมือกันสารเคมี/แว่น/หน้ากากที่เหมาะสม) และทำงานในที่อากาศถ่ายเท</li>
+      <li data-i18n-key="bu20_safe_2">ควบคุมกระแส/เวลาในช่วงที่กำหนด เพื่อป้องกันความร้อนสะสมที่ไม่จำเป็น</li>
+      <li data-i18n-key="bu20_safe_3">จัดการน้ำทิ้ง/ตะกอนตามข้อกำหนดท้องถิ่น โดยผู้รับกำจัดที่ได้รับอนุญาต</li>
+    </ul>
+  </div>
+</section>
+
+<!-- Principles (new, ties everything together) -->
+<section id="principles" class="reveal section-block" aria-labelledby="principles-h">
+  <h2 id="principles-h" class="section" data-i18n-key="bu20_principles_h">หลักการทำงานของ BU-20</h2>
+  <div class="content">
+    <ul>
+      <li data-i18n-key="bu20_principles_1">สร้างฟิล์มบาง ๆ: การปล่อยกระแสไฟในสารละลาย BU-20 ช่วยให้สารประกอบเคลือบติดบนผิวโลหะอย่างสม่ำเสมอและควบคุมความหนาได้</li>
+      <li data-i18n-key="bu20_principles_2">ความเสถียรของฟิล์ม: กระบวนการด้วยไฟฟ้าให้ฟิล์มที่ทนทานและเสถียรกว่าวิธีจุ่มทั่วไป</li>
+    </ul>
+  </div>
+</section>
+
+<!-- Issues & Fixes -->
+<section id="issues" class="reveal section-block" aria-labelledby="issues-h">
+  <h2 id="issues-h" class="section" data-i18n-key="bu20_issues_h">ปัญหาที่พบบ่อย & แนวทางแก้ไข</h2>
+  <div class="content">
+    <article>
+      <h3 data-i18n-key="bu20_issue1_h">1) ฟิล์มกันหมองไม่สม่ำเสมอ</h3>
+      <ul>
+        <li data-i18n-key="bu20_issue1_c1">การเตรียมผิวไม่ดี: มีคราบไขมัน/สิ่งสกปรกค้างบนชิ้นงาน</li>
+        <li data-i18n-key="bu20_issue1_c2">หน้าสัมผัสไฟฟ้าไม่ดี: ราวแขวน/ตะขอมีออกไซด์ ทำให้กระแสไม่เสถียร</li>
+        <li data-i18n-key="bu20_issue1_c3">การกวนไม่พอ: ไม่มีการกวน/ไหลเวียน ทำให้ความหนาฟิล์มไม่เท่ากัน</li>
+        <li data-i18n-key="bu20_issue1_c4">กระแสไฟไม่คงที่: ควบคุมแรงดัน/กระแสไม่แม่น</li>
+      </ul>
+      <p data-i18n-key="bu20_issue1_fix"><strong>วิธีแก้:</strong> ทำความสะอาดผิวอย่างทั่วถึง, ขัดหน้าสัมผัส, ใช้ระบบกวนที่เหมาะสม, ใช้แหล่งจ่ายไฟที่คุม V/A ได้แม่นยำ</p>
+    </article>
+
+    <article>
+      <h3 data-i18n-key="bu20_issue2_h">2) ฟิล์มหลุดลอกหรือคุณภาพต่ำ</h3>
+      <ul>
+        <li data-i18n-key="bu20_issue2_c1">เวลาไฟสั้นไป: ฟิล์มบาง ไม่ทน</li>
+        <li data-i18n-key="bu20_issue2_c2">กระแสสูงเกิน: ฟิล์มหนาเกิน มีแนวโน้มลอก</li>
+        <li data-i18n-key="bu20_issue2_c3">น้ำยาเสื่อม: เจือจางจาก drag-out ไม่ได้เติมตามอัตรา</li>
+      </ul>
+      <p data-i18n-key="bu20_issue2_fix"><strong>วิธีแก้:</strong> รักษาเวลา/กระแสให้อยู่ในกรอบ, เติม BU-20 ตามอัตราเพื่อคงคุณภาพบ่อ</p>
+    </article>
+  </div>
+</section>
+
 
     </article>
   </main>
@@ -519,6 +556,57 @@
         safe_2:"ควบคุมกระแส/เวลาในช่วงที่กำหนด ป้องกันความร้อนสะสมที่ไม่จำเป็น",
         safe_3:"จัดการน้ำทิ้ง/ตะกอนตามข้อกำหนดท้องถิ่นด้วยผู้รับกำจัดที่ได้รับอนุญาต",
 
+            bu20_makeup_h: "ตัวอย่างการผสม",
+    bu20_mk_s1: "เติมน้ำ: เริ่มต้นด้วยการเติมน้ำบริสุทธิ์ลงในถังประมาณครึ่งหนึ่งของปริมาตรทั้งหมด",
+    bu20_mk_s2: "อุ่นและกวน: ค่อยๆ อุ่นน้ำให้ได้อุณหภูมิประมาณ 35 °C ซึ่งเป็นอุณหภูมิที่เหมาะสมสำหรับการละลายและการทำงานของสารเคมี พร้อมกับกวนน้ำเบาๆ เพื่อให้มั่นใจว่าอุณหภูมิเท่ากันทั่วทั้งถัง",
+    bu20_mk_s3: "เติม BU-20: เติมสารละลาย BU-20 เข้มข้นลงไปอย่างช้าๆ ตามอัตราส่วนที่แนะนำ (80–120 cc/L) พร้อมกับกวนอย่างต่อเนื่องจนสารละลายละลายเข้ากับน้ำได้อย่างสมบูรณ์",
+    bu20_mk_s4: "เติมน้ำให้เต็ม: เติมน้ำบริสุทธิ์ส่วนที่เหลือจนถึงระดับปฏิบัติการที่กำหนดไว้ และกวนให้สารละลายเป็นเนื้อเดียวกัน",
+
+    // Electrodes
+    bu20_electrodes_h: "ขั้วไฟฟ้า & การต่อวงจร",
+    bu20_el_1: "แอโนด: ใช้แผ่น สแตนเลส เป็นขั้วแอโนด (ขั้วบวก) ซึ่งควรทำความสะอาดให้ปราศจากคราบออกไซด์ก่อนใช้งานทุกครั้งเพื่อประสิทธิภาพสูงสุด",
+    bu20_el_2: "การต่อวงจร: เชื่อมต่อระบบไฟฟ้าตามคำแนะนำในคู่มือ BU-20 ซึ่งจะช่วยควบคุมทิศทางการไหลของกระแสไฟฟ้าและทำให้ฟิล์มมีความสม่ำเสมอ",
+    bu20_el_3: "การกวน: ใช้ระบบกวนเบาๆ หรือการไหลเวียนของน้ำยาเพื่อป้องกันการรวมตัวกันของสารแขวนลอยและช่วยให้ความหนาของฟิล์มคงที่",
+    bu20_el_4: "หน้าสัมผัส: ตรวจสอบให้แน่ใจว่าราวแขวนหรือตะขอที่ใช้แขวนชิ้นงานมีความสะอาดและไม่มีคราบออกไซด์ เพื่อให้กระแสไฟไหลผ่านไปยังชิ้นงานได้อย่างสม่ำเสมอ",
+
+    // Process
+    bu20_process_h: "ขั้นตอนการทำงาน",
+    bu20_proc_1: "การเตรียมผิว: ขั้นตอนนี้สำคัญมาก ชิ้นงานต้องผ่านการทำความสะอาดและขจัดคราบไขมันอย่างหมดจดก่อนจุ่ม เพื่อให้ฟิล์มเกาะติดได้อย่างมีประสิทธิภาพ",
+    bu20_proc_2: "จุ่มชิ้นงาน: จุ่มชิ้นงานลงในอ่างสารละลาย BU-20 ที่เตรียมไว้",
+    bu20_proc_3: "จ่ายไฟ: ปรับค่าความหนาแน่นกระแสไฟฟ้าให้อยู่ในช่วง 0.1–0.5 A/dm² และปล่อยกระแสไฟเป็นเวลา 30–120 วินาที (ขึ้นอยู่กับชนิดของชิ้นงานและความหนาฟิล์มที่ต้องการ) การควบคุมกระแสไฟให้คงที่เป็นสิ่งสำคัญ",
+    bu20_proc_4: "การทำให้แห้ง: นำชิ้นงานขึ้นมาทันทีหลังการจุ่ม และใช้ ลมเป่าหรือการอบอุ่น เพื่อให้ชิ้นงานแห้งสนิท ซึ่งจะช่วยป้องกันการเกิดคราบน้ำและทำให้ฟิล์มมีความสวยงาม",
+
+    // Maintenance / Replenishment
+    bu20_maint_h: "การปรับเติม (Replenishment)",
+    bu20_maint_p1: "สารละลาย BU-20 ที่ผสมใหม่ควรมีความเข้มข้นอยู่ที่ 8–12% v/v แต่เมื่อใช้งานไปเรื่อยๆ น้ำยาจะถูกลากออกไปพร้อมกับชิ้นงาน (drag-out) ทำให้ความเข้มข้นลดลง และไม่สามารถกู้กลับคืนได้",
+    bu20_maint_p2: "ดังนั้น จึงจำเป็นต้องมีการปรับเติมเพื่อรักษาสภาพน้ำยา โดยมีแนวทางคือการเติม BU-20 1 ลิตร ต่อพื้นที่ชิ้นงานที่ผ่านบ่อประมาณ ~2,000 dm² (≈ 20 m²) เพื่อรักษาคุณภาพของฟิล์มที่เคลือบ",
+
+    // Safety
+    bu20_safety_h: "ความปลอดภัย & สิ่งแวดล้อม",
+    bu20_safe_1: "การสวม PPE: ต้องสวม ถุงมือกันสารเคมี, แว่นตานิรภัย, และหน้ากาก ที่เหมาะสม และทำงานในพื้นที่ที่มี อากาศถ่ายเทสะดวก",
+    bu20_safe_2: "การควบคุมกระบวนการ: ควบคุมกระแสไฟฟ้าและเวลาในการทำงานให้แม่นยำเพื่อป้องกันการสะสมความร้อนที่ไม่จำเป็น ซึ่งอาจทำให้อุณหภูมิของสารละลายสูงเกินไป",
+    bu20_safe_3: "การจัดการของเสีย: น้ำทิ้งและตะกอนจากกระบวนการนี้ถือเป็น ของเสียอันตราย และต้องได้รับการจัดการตามกฎหมายท้องถิ่นเท่านั้น โดยการส่งให้ ผู้รับกำจัดที่ได้รับอนุญาต เป็นผู้ดำเนินการอย่างถูกวิธี",
+
+    // Principles
+    bu20_principles_h: "หลักการทำงานของ BU-20",
+    bu20_principles_1: "สร้างฟิล์มบาง ๆ: การปล่อยกระแสไฟในสารละลาย BU-20 ช่วยให้สารประกอบเคลือบติดบนผิวโลหะอย่างสม่ำเสมอและควบคุมความหนาได้",
+    bu20_principles_2: "ความเสถียรของฟิล์ม: กระบวนการด้วยไฟฟ้าให้ฟิล์มที่ทนทานและเสถียรกว่าวิธีจุ่มทั่วไป",
+
+    // Issues
+    bu20_issues_h: "ปัญหาที่พบบ่อย & แนวทางแก้ไข",
+    bu20_issue1_h: "1) ฟิล์มกันหมองไม่สม่ำเสมอ",
+    bu20_issue1_c1: "การเตรียมผิวไม่ดี: มีคราบไขมัน/สิ่งสกปรกค้างบนชิ้นงาน",
+    bu20_issue1_c2: "หน้าสัมผัสไฟฟ้าไม่ดี: ราวแขวน/ตะขอมีออกไซด์ ทำให้กระแสไม่เสถียร",
+    bu20_issue1_c3: "การกวนไม่พอ: ไม่มีการกวน/ไหลเวียน ทำให้ความหนาฟิล์มไม่เท่ากัน",
+    bu20_issue1_c4: "กระแสไฟไม่คงที่: ควบคุมแรงดัน/กระแสไม่แม่น",
+    bu20_issue1_fix: "วิธีแก้: ทำความสะอาดผิวอย่างทั่วถึง, ขัดหน้าสัมผัส, ใช้ระบบกวนที่เหมาะสม, ใช้แหล่งจ่ายไฟที่คุม V/A ได้แม่นยำ",
+
+    bu20_issue2_h: "2) ฟิล์มหลุดลอกหรือคุณภาพต่ำ",
+    bu20_issue2_c1: "เวลาไฟสั้นไป: ฟิล์มบาง ไม่ทน",
+    bu20_issue2_c2: "กระแสสูงเกิน: ฟิล์มหนาเกิน มีแนวโน้มลอก",
+    bu20_issue2_c3: "น้ำยาเสื่อม: เจือจางจาก drag-out ไม่ได้เติมตามอัตรา",
+    bu20_issue2_fix: "วิธีแก้: รักษาเวลา/กระแสให้อยู่ในกรอบ, เติม BU-20 ตามอัตราเพื่อคงคุณภาพบ่อ",
+
         footer_products:"หมวดผลิตภัณฑ์", footer_contact:"ติดต่อเรา", footer_copy:"© 2025 Baume Chemical. All rights reserved."
       },
 
@@ -584,10 +672,56 @@
         maint_p1:"Operate at 8–12% v/v (80–120 cc/L) after make-up. Bath dilutes via drag-out; you cannot recover from drag-out.",
         maint_p2:"Guideline: add 1 L BU-20 per ~2,000 dm² (≈ 20 m²) of work processed to maintain film quality.",
 
-        safety_h:"Safety & environment",
-        safe_1:"Wear PPE (chemical gloves/goggles/appropriate respirator) and ensure ventilation.",
-        safe_2:"Keep current/time within range; avoid unnecessary heat buildup.",
-        safe_3:"Dispose of spent bath/sludge per local regulations via licensed handlers.",
+    bu20_makeup_h: "Make-up Example",
+    bu20_mk_s1: "Fill the tank with ~50% of total volume with water.",
+    bu20_mk_s2: "Heat to ~35 °C with gentle agitation.",
+    bu20_mk_s3: "Slowly add BU-20 per recommended ratio until fully dissolved.",
+    bu20_mk_s4: "Top up to operating level and mix until clear and uniform.",
+
+    // Electrodes
+    bu20_electrodes_h: "Electrodes & Circuit",
+    bu20_el_1: "Anode (+): Stainless steel plates; clean before use.",
+    bu20_el_2: "Wiring: Connect per BU-20 line manual to achieve uniform film and controlled thickness.",
+    bu20_el_3: "Agitation: Light agitation or recirculation to stabilize film formation.",
+    bu20_el_4: "Contacts: Clean racks/hooks free of oxides for stable current.",
+
+    // Process
+    bu20_process_h: "Process Steps",
+    bu20_proc_1: "Surface prep: Degrease and rinse thoroughly.",
+    bu20_proc_2: "Immerse parts in BU-20 bath.",
+    bu20_proc_3: "Apply current density of 0.1–0.5 A/dm² for 30–120 s (keep stable).",
+    bu20_proc_4: "Withdraw and dry via air-blow/warm drying for good water-break and uniform film.",
+
+    // Maintenance / Replenishment
+    bu20_maint_h: "Maintenance / Replenishment",
+    bu20_maint_p1: "After fresh make-up, operate at 8–12% v/v (80–120 cc/L). The bath dilutes due to drag-out — solution from drag-out cannot be recovered.",
+    bu20_maint_p2: "Replenishment guideline: add BU-20 at ~1 L per ~2,000 dm² (≈ 20 m²) of work to maintain film quality.",
+
+    // Safety
+    bu20_safety_h: "Safety & Environment",
+    bu20_safe_1: "Wear PPE (chemical gloves/goggles/appropriate mask) and work in a ventilated area.",
+    bu20_safe_2: "Control current/time within the specified window to avoid unnecessary heat build-up.",
+    bu20_safe_3: "Dispose of wastewater/sludge per local regulations via licensed contractors.",
+
+    // Principles
+    bu20_principles_h: "BU-20 Operating Principles",
+    bu20_principles_1: "Thin-film formation: Current flow in BU-20 drives uniform deposition with controllable thickness.",
+    bu20_principles_2: "Film stability: Electro-assisted process yields more durable and stable films than passive dipping.",
+
+    // Issues
+    bu20_issues_h: "Common Issues & Fixes",
+    bu20_issue1_h: "1) Non-uniform anti-tarnish film",
+    bu20_issue1_c1: "Poor surface prep: residual oils/contaminants on parts.",
+    bu20_issue1_c2: "Poor electrical contact: oxidized racks/hooks causing unstable current.",
+    bu20_issue1_c3: "Insufficient agitation: no mixing/recirculation leading to thickness variation.",
+    bu20_issue1_c4: "Unstable current: inadequate control of voltage/amperage.",
+    bu20_issue1_fix: "Fix: Thorough cleaning, polish contacts, apply suitable agitation, and use a tightly controlled power supply.",
+
+    bu20_issue2_h: "2) Film peeling or low quality",
+    bu20_issue2_c1: "Too short dwell under current: film too thin and weak.",
+    bu20_issue2_c2: "Current too high: overly thick, brittle film prone to peeling.",
+    bu20_issue2_c3: "Degraded bath: diluted by drag-out without proper BU-20 replenishment.",
+    bu20_issue2_fix: "Fix: Keep current/time within spec; replenish BU-20 per guideline to maintain bath strength.",
 
         footer_products:"Products", footer_contact:"Contact Us", footer_copy:"© 2025 Baume Chemical. All rights reserved."
       }
