--- a/products/protective/tin-anti-tarnish-b100.html
+++ b/products/protective/tin-anti-tarnish-b100.html
@@ -326,44 +326,89 @@
         </div>
       </section>
 
-      <!-- Make-up example -->
-      <section id="makeup" class="reveal section-block" aria-labelledby="makeup-h">
-        <h2 id="makeup-h" class="section" data-i18n-key="makeup_h">ตัวอย่างการผสม (10 ลิตร)</h2>
-        <div class="content">
-          <ul>
-            <li data-i18n-key="mk_s1">ตวง <strong>B100 = 500 cc</strong> (ที่ 50 cc/L)</li>
-            <li data-i18n-key="mk_s2">เติมน้ำกลั่นประมาณ <strong>9.5 ลิตร</strong> รวมเป็น 10 ลิตร</li>
-            <li data-i18n-key="mk_s3">กวนให้เข้ากันจนใสสม่ำเสมอ และอุ่นตามช่วงที่กำหนดก่อนใช้งาน</li>
-          </ul>
-        </div>
-      </section>
+<!-- Make-up example -->
+<section id="makeup" class="reveal section-block" aria-labelledby="makeup-h">
+  <h2 id="makeup-h" class="section" data-i18n-key="b100_makeup_h">ตัวอย่างการผสม (10 ลิตร)</h2>
+  <div class="content">
+    <ul>
+      <li data-i18n-key="b100_mk_s1">ตวง <strong>B100 = 500 cc</strong> (ที่ 50 cc/L)</li>
+      <li data-i18n-key="b100_mk_s2">เติมน้ำกลั่นประมาณ <strong>9.5 ลิตร</strong> รวมเป็น 10 ลิตร</li>
+      <li data-i18n-key="b100_mk_s3">กวนให้เข้ากันจนใสสม่ำเสมอ และอุ่นตามช่วงที่กำหนดก่อนใช้งาน</li>
+    </ul>
+    <p class="lead" data-i18n-key="b100_mk_lead">
+      การเตรียมสารละลาย B100 เป็นขั้นตอนสำคัญเพื่อให้ได้ประสิทธิภาพสูงสุด ค่อย ๆ เติมและกวนจนเป็นเนื้อเดียว ลักษณะใสสม่ำเสมอจึงพร้อมใช้งาน
+    </p>
+  </div>
+</section>
 
-      <!-- Process -->
-      <section id="process" class="reveal section-block" aria-labelledby="process-h">
-        <h2 id="process-h" class="section" data-i18n-key="process_h">ขั้นตอนการทำงาน</h2>
-        <div class="content">
-          <ol>
-            <li data-i18n-key="proc_1">ชิ้นงานดีบุกที่ชุบเรียบร้อยแล้ว</li>
-            <li data-i18n-key="proc_2">ล้างน้ำสะอาด 1–2 ขั้น</li>
-            <li data-i18n-key="proc_3">จุ่มน้ำกลั่น</li>
-            <li data-i18n-key="proc_4">จุ่ม <strong>B100</strong> ที่ <strong>30–55 °C</strong> เป็นเวลา <strong>10 s–1 min</strong></li>
-            <li data-i18n-key="proc_5">นำขึ้นแล้ว <strong>อบร้อนหรือปั่นเหวี่ยงให้แห้ง</strong></li>
-          </ol>
-        </div>
-      </section>
+<!-- Process -->
+<section id="process" class="reveal section-block" aria-labelledby="process-h">
+  <h2 id="process-h" class="section" data-i18n-key="b100_process_h">ขั้นตอนการทำงาน</h2>
+  <div class="content">
+    <ol>
+      <li data-i18n-key="b100_proc_1">ชิ้นงานดีบุกที่ชุบเรียบร้อยแล้ว</li>
+      <li data-i18n-key="b100_proc_2">ล้างน้ำสะอาด 1–2 ขั้น เพื่อขจัดคราบสารเคมีตกค้าง</li>
+      <li data-i18n-key="b100_proc_3">จุ่มน้ำกลั่น เพื่อลดคราบไอออนหรือเกลือที่อาจหลงเหลืออยู่</li>
+      <li data-i18n-key="b100_proc_4">จุ่ม <strong>B100</strong> ที่ <strong>30–55 °C</strong> เป็นเวลา <strong>10 s–1 min</strong> โดยควบคุมเวลาและอุณหภูมิให้คงที่</li>
+      <li data-i18n-key="b100_proc_5">นำขึ้นแล้ว <strong>อบร้อนหรือปั่นเหวี่ยงให้แห้ง</strong> เพื่อไล่น้ำและป้องกันคราบน้ำ</li>
+    </ol>
+    <p class="note" data-i18n-key="b100_proc_note">
+      ควบคุมเวลาและอุณหภูมิภายในกรอบแนะนำเพื่อให้ได้ฟิล์มเคลือบที่มีความหนาสม่ำเสมอและรูปลักษณ์ที่สวยงาม
+    </p>
+  </div>
+</section>
 
-      <!-- Safety -->
-      <section id="safety" class="reveal section-block" aria-labelledby="safety-h">
-        <h2 id="safety-h" class="section" data-i18n-key="safety_h">ความปลอดภัย &amp; ข้อแนะนำ</h2>
-        <div class="content">
-          <ul>
-            <li data-i18n-key="safe_1">สวม PPE (ถุงมือกันสารเคมี/แว่น) และทำงานในที่อากาศถ่ายเท</li>
-            <li data-i18n-key="safe_2">คุมอุณหภูมิและเวลาในช่วงแนะนำ เพื่อคุณภาพฟิล์มสม่ำเสมอ</li>
-            <li data-i18n-key="safe_3">ผิวงานต้องสะอาด ปราศจากกรด/ด่างค้าง เพื่อประสิทธิภาพการกันหมองที่ดี</li>
-            <li data-i18n-key="safe_4">จัดเก็บน้ำยาในภาชนะปิดสนิท หลีกเลี่ยงแสง/ความร้อนสูง</li>
-          </ul>
-        </div>
-      </section>
+<!-- Safety -->
+<section id="safety" class="reveal section-block" aria-labelledby="safety-h">
+  <h2 id="safety-h" class="section" data-i18n-key="b100_safety_h">ความปลอดภัย &amp; ข้อแนะนำ</h2>
+  <div class="content">
+    <ul>
+      <li data-i18n-key="b100_safe_1">สวม PPE (ถุงมือกันสารเคมี/แว่น) และทำงานในที่อากาศถ่ายเท</li>
+      <li data-i18n-key="b100_safe_2">คุมอุณหภูมิและเวลาในช่วงแนะนำ เพื่อคุณภาพฟิล์มสม่ำเสมอ</li>
+      <li data-i18n-key="b100_safe_3">ผิวงานต้องสะอาด ปราศจากกรด/ด่างค้าง เพื่อประสิทธิภาพการกันหมองที่ดี</li>
+      <li data-i18n-key="b100_safe_4">จัดเก็บน้ำยาในภาชนะปิดสนิท หลีกเลี่ยงแสงและความร้อนสูง</li>
+    </ul>
+  </div>
+</section>
+
+<!-- Issues & Fixes -->
+<section id="issues" class="reveal section-block" aria-labelledby="issues-h">
+  <h2 id="issues-h" class="section" data-i18n-key="b100_issues_h">ปัญหาที่พบบ่อย & แนวทางแก้ไข</h2>
+  <div class="content">
+    <article class="issue">
+      <h3 data-i18n-key="b100_issue1_h">1) ฟิล์มกันหมองไม่สม่ำเสมอ</h3>
+      <ul>
+        <li data-i18n-key="b100_issue1_cause1">การล้างไม่สะอาด: มีกรดหรือด่างตกค้างบนผิวชิ้นงาน</li>
+        <li data-i18n-key="b100_issue1_cause2">อุณหภูมิไม่คงที่: ต่ำหรือสูงเกินช่วง <strong>30–55 °C</strong></li>
+        <li data-i18n-key="b100_issue1_cause3">เวลาในการจุ่มไม่เหมาะสม: สั้นเกินไปทำให้ฟิล์มบาง หรือยาวเกินไปจนหนาเป็นคราบ</li>
+      </ul>
+      <p data-i18n-key="b100_issue1_fix">
+        แนวทางแก้: ตรวจสอบความสะอาดก่อนจุ่ม ใช้การควบคุมอุณหภูมิที่แม่นยำ รักษาเวลาในกรอบ <strong>10 วินาที–1 นาที</strong> และปรับตามชนิดของชิ้นงาน
+      </p>
+    </article>
+
+    <article class="issue">
+      <h3 data-i18n-key="b100_issue2_h">2) ประสิทธิภาพในการกันหมองต่ำ</h3>
+      <ul>
+        <li data-i18n-key="b100_issue2_cause1">น้ำยาเสื่อมสภาพจากสิ่งสกปรกหรือโลหะปนเปื้อน</li>
+        <li data-i18n-key="b100_issue2_cause2">การจัดเก็บไม่เหมาะสม: โดนแสงหรือความร้อนสูงเป็นเวลานาน</li>
+      </ul>
+      <p data-i18n-key="b100_issue2_fix">
+        แนวทางแก้: เปลี่ยนน้ำยาใหม่เมื่อประสิทธิภาพลดลง จัดเก็บในภาชนะปิดสนิท วางในที่เย็นและมืด
+      </p>
+    </article>
+
+    <article class="issue">
+      <h3 data-i18n-key="b100_issue3_h">3) เกิดคราบน้ำบนชิ้นงาน</h3>
+      <ul>
+        <li data-i18n-key="b100_issue3_cause1">การทำให้แห้งไม่ดีหลังการจุ่ม ทำให้เกิดคราบน้ำหรือรอยด่าง</li>
+      </ul>
+      <p data-i18n-key="b100_issue3_fix">
+        แนวทางแก้: นำชิ้นงานขึ้นแล้วปั่นเหวี่ยงหรืออบร้อนทันทีเพื่อไล่น้ำออกให้หมดและให้แห้งสนิท
+      </p>
+    </article>
+  </div>
+</section>
 
     </article>
   </main>
@@ -468,11 +513,44 @@
         proc_4:"จุ่ม B100 ที่ 30–55 °C เป็นเวลา 10 s–1 min",
         proc_5:"นำขึ้นแล้ว อบร้อนหรือปั่นเหวี่ยงให้แห้ง",
 
-        safety_h:"ความปลอดภัย & ข้อแนะนำ",
-        safe_1:"สวม PPE (ถุงมือกันสารเคมี/แว่น) และทำงานในที่อากาศถ่ายเท",
-        safe_2:"คุมอุณหภูมิและเวลาในช่วงแนะนำ เพื่อคุณภาพฟิล์มสม่ำเสมอ",
-        safe_3:"ผิวงานต้องสะอาด ปราศจากกรด/ด่างค้าง เพื่อประสิทธิภาพการกันหมองที่ดี",
-        safe_4:"จัดเก็บน้ำยาในภาชนะปิดสนิท หลีกเลี่ยงแสง/ความร้อนสูง",
+    b100_makeup_h: "ตัวอย่างการผสม (10 ลิตร)",
+    b100_mk_s1: "ตวง B100 = 500 cc (ที่ 50 cc/L)",
+    b100_mk_s2: "เติมน้ำกลั่นประมาณ 9.5 ลิตร รวมเป็น 10 ลิตร",
+    b100_mk_s3: "กวนให้เข้ากันจนใสสม่ำเสมอ และอุ่นตามช่วงที่กำหนดก่อนใช้งาน",
+    b100_mk_lead: "การเตรียมสารละลาย B100 เป็นขั้นตอนสำคัญเพื่อให้ได้ประสิทธิภาพสูงสุด ค่อย ๆ เติมและกวนจนเป็นเนื้อเดียว ลักษณะใสสม่ำเสมอจึงพร้อมใช้งาน",
+
+    // Process
+    b100_process_h: "ขั้นตอนการทำงาน",
+    b100_proc_1: "การเตรียมชิ้นงาน: ชิ้นงานดีบุกที่ผ่านการชุบมาแล้วจะต้อง ล้างน้ำสะอาด 1-2 ครั้ง เพื่อขจัดคราบสารเคมีที่ตกค้างออกให้หมดจด",
+    b100_proc_2: "ล้างน้ำสะอาด 1–2 ขั้น เพื่อขจัดคราบสารเคมีตกค้าง",
+    b100_proc_3: "จุ่มน้ำกลั่น เพื่อลดคราบไอออนหรือเกลือที่อาจหลงเหลืออยู่",
+    b100_proc_4: "การจุ่มสารกันหมอง: นำชิ้นงานที่เตรียมไว้ จุ่มลงในบ่อ B100 ที่อุณหภูมิ 30–55 °C เป็นเวลา 10 วินาทีถึง 1 นาที การควบคุมเวลาและอุณหภูมิเป็นสิ่งสำคัญเพื่อให้ได้ฟิล์มเคลือบที่มีความหนาสม่ำเสมอ",
+    b100_proc_5: "การทำให้แห้ง: นำชิ้นงานขึ้นจากบ่อแล้ว อบร้อน หรือ ปั่นเหวี่ยง ทันที เพื่อไล่น้ำออกให้หมดและทำให้ชิ้นงานแห้งสนิท ขั้นตอนนี้จะช่วยป้องกันการเกิดคราบน้ำและรักษารูปลักษณ์ที่สวยงามของชิ้นงาน",
+    b100_proc_note: "ควบคุมเวลาและอุณหภูมิภายในกรอบแนะนำเพื่อให้ได้ฟิล์มเคลือบที่มีความหนาสม่ำเสมอและรูปลักษณ์ที่สวยงาม",
+
+    // Safety
+    b100_safety_h: "ความปลอดภัย & ข้อแนะนำ",
+    b100_safe_1: "สวมใส่อุปกรณ์ป้องกันส่วนบุคคล (PPE): ควรสวม ถุงมือกันสารเคมีและแว่นตานิรภัย เสมอ และทำงานในบริเวณที่มี อากาศถ่ายเทสะดวก",
+    b100_safe_2: "ควบคุมอุณหภูมิและเวลา: การรักษาอุณหภูมิและเวลาในการจุ่มให้อยู่ในกรอบที่แนะนำจะช่วยให้ฟิล์มกันหมองมีความสม่ำเสมอและทนทาน",
+    b100_safe_3: "รักษาความสะอาดของผิวงาน: หากผิวงานมีคราบ กรดหรือด่าง หลงเหลืออยู่ อาจส่งผลกระทบต่อประสิทธิภาพในการเคลือบกันหมอง ทำให้เกิดคราบหรือฟิล์มไม่สมบูรณ์",
+    b100_safe_4: "การจัดเก็บ: ควรจัดเก็บน้ำยา B100 ในภาชนะปิดสนิท และ หลีกเลี่ยงการโดนแสงแดดโดยตรงหรือความร้อนสูง เพื่อรักษาคุณภาพของน้ำยาให้คงที่",
+
+    // Issues
+    b100_issues_h: "ปัญหาที่พบบ่อย & แนวทางแก้ไข",
+    b100_issue1_h: "1) ฟิล์มกันหมองไม่สม่ำเสมอ",
+    b100_issue1_cause1: "การล้างไม่สะอาด: มีกรดหรือด่างตกค้างบนผิวชิ้นงาน",
+    b100_issue1_cause2: "อุณหภูมิไม่คงที่: ต่ำหรือสูงเกินช่วง 30–55 °C",
+    b100_issue1_cause3: "เวลาในการจุ่มไม่เหมาะสม: สั้นเกินไปทำให้ฟิล์มบาง หรือยาวเกินไปจนหนาเป็นคราบ",
+    b100_issue1_fix: "แนวทางแก้: ตรวจสอบความสะอาดก่อนจุ่ม ใช้การควบคุมอุณหภูมิที่แม่นยำ รักษาเวลาในกรอบ 10 วินาที–1 นาที และปรับตามชนิดของชิ้นงาน",
+
+    b100_issue2_h: "2) ประสิทธิภาพในการกันหมองต่ำ",
+    b100_issue2_cause1: "น้ำยาเสื่อมสภาพจากสิ่งสกปรกหรือโลหะปนเปื้อน",
+    b100_issue2_cause2: "การจัดเก็บไม่เหมาะสม: โดนแสงหรือความร้อนสูงเป็นเวลานาน",
+    b100_issue2_fix: "แนวทางแก้: เปลี่ยนน้ำยาใหม่เมื่อประสิทธิภาพลดลง จัดเก็บในภาชนะปิดสนิท วางในที่เย็นและมืด",
+
+    b100_issue3_h: "3) เกิดคราบน้ำบนชิ้นงาน",
+    b100_issue3_cause1: "การทำให้แห้งไม่ดีหลังการจุ่ม ทำให้เกิดคราบน้ำหรือรอยด่าง",
+    b100_issue3_fix: "แนวทางแก้: นำชิ้นงานขึ้นแล้วปั่นเหวี่ยงหรืออบร้อนทันทีเพื่อไล่น้ำออกให้หมดและให้แห้งสนิท",
 
         footer_products:"หมวดผลิตภัณฑ์", footer_contact:"ติดต่อเรา", footer_copy:"© 2025 Baume Chemical. All rights reserved."
       },
@@ -525,11 +603,44 @@
         proc_4:"Dip in B100 at 30–55 °C for 10 s–1 min.",
         proc_5:"Remove and warm-dry or spin-dry.",
 
-        safety_h:"Safety & guidance",
-        safe_1:"Wear PPE (chemical gloves/goggles); ensure ventilation.",
-        safe_2:"Keep temperature/time within spec for uniform films.",
-        safe_3:"Ensure surfaces are free of residual acid/alkali for best performance.",
-        safe_4:"Store sealed; avoid heat and direct light.",
+    b100_makeup_h: "Make-up Example (10 L)",
+    b100_mk_s1: "Measure B100 = 500 cc (at 50 cc/L).",
+    b100_mk_s2: "Add deionized water about 9.5 L to make a total of 10 L.",
+    b100_mk_s3: "Mix until clear and uniform, then warm to the specified range before use.",
+    b100_mk_lead: "Proper B100 preparation is critical. Add gradually and mix to a clear single phase before operation.",
+
+    // Process
+    b100_process_h: "Process Steps",
+    b100_proc_1: "Tin-plated workpieces completed beforehand.",
+    b100_proc_2: "Rinse with clean water 1–2 stages to remove residues.",
+    b100_proc_3: "Dip in deionized water to minimize ionic residues.",
+    b100_proc_4: "Dip in B100 at 30–55 °C for 10 s–1 min with stable time/temperature control.",
+    b100_proc_5: "Withdraw and dry by hot air or centrifuge to avoid water marks.",
+    b100_proc_note: "Keep within the recommended window to achieve uniform film thickness and good appearance.",
+
+    // Safety
+    b100_safety_h: "Safety & Recommendations",
+    b100_safe_1: "Wear PPE (chemical gloves/goggles) and work in a ventilated area.",
+    b100_safe_2: "Control temperature and time within the recommended window for consistent film quality.",
+    b100_safe_3: "Ensure surfaces are clean and free from acid/alkali residues for optimal anti-tarnish performance.",
+    b100_safe_4: "Store B100 in tightly closed containers away from light and heat.",
+
+    // Issues
+    b100_issues_h: "Common Issues & Fixes",
+    b100_issue1_h: "1) Non-uniform anti-tarnish film",
+    b100_issue1_cause1: "Inadequate rinsing: acid/alkali residues remain on the surface.",
+    b100_issue1_cause2: "Unstable bath temperature: outside the 30–55 °C range.",
+    b100_issue1_cause3: "Improper dwell time: too short leads to thin film; too long causes over-thick, patchy film.",
+    b100_issue1_fix: "Fix: verify cleanliness, use precise temperature control, keep dwell within 10 s–1 min and tune per part type.",
+
+    b100_issue2_h: "2) Low anti-tarnish performance",
+    b100_issue2_cause1: "Degraded solution due to contamination or dissolved metals.",
+    b100_issue2_cause2: "Improper storage: prolonged exposure to heat or light.",
+    b100_issue2_fix: "Fix: renew the bath when performance drops; store sealed in a cool, dark place.",
+
+    b100_issue3_h: "3) Water marks on parts",
+    b100_issue3_cause1: "Insufficient drying after dipping leads to stains.",
+    b100_issue3_fix: "Fix: centrifuge or hot-air dry immediately to fully remove water.",
 
         footer_products:"Products", footer_contact:"Contact Us", footer_copy:"© 2025 Baume Chemical. All rights reserved."
       }
