upload all files

--- a/products/equipment/index.html
+++ b/products/equipment/index.html
@@ -367,7 +367,7 @@
         c2_t:"เครื่องมือวิเคราะห์ในห้องปฏิบัติการ",
         c2_d:"ในห้องปฏิบัติการทางวิทยาศาสตร์ โดยเฉพาะในอุตสาหกรรมชุบโลหะและการผลิตที่ต้องทำการทดสอบสารเคมีและวิเคราะห์สมบัติของวัสดุ เครื่องมือวิเคราะห์ถือเป็นหัวใจสำคัญเพื่อให้การทดสอบแม่นยำและมีประสิทธิภาพ ตัวอย่างเช่น เครื่อง Atomic Absorption Spectrometer (AAS) สำหรับวิเคราะห์โลหะหนักในสารละลาย เครื่องวัด pH เครื่องวัด Conductivity เครื่อง UV-Vis เครื่องไทเทรเตอร์ และ Salt Spray Tester สำหรับทดสอบความทนการกัดกร่อน เครื่องมือเหล่านี้ช่วยให้การวิเคราะห์มีความถูกต้องและเที่ยงตรง สนับสนุนการประกันคุณภาพ",
         c3_t:"อุปกรณ์สำหรับกระบวนการชุบหลากหลาย",
-        c3_d:"อุปกรณ์หน้างาน เช่น ถังชุบพร้อมควบคุมอุณหภูมิ/ความเข้มข้น/ค่า pH เรคติไฟเออร์ เครื่องเฝ้าระวัง pH/อุณหภูมิ เครื่องวัดความหนาฟิล์ม ชุดจิ๊ก และเครื่องล้างอัลตราโซนิก ช่วยให้ควบคุมกระบวนการได้ตามเป้าหมายและคุณภาพสม่ำเสมอ",
+        c3_d:"ในกระบวนการเคลือบผิวโลหะ การใช้อุปกรณ์ที่เหมาะสมคือหัวใจสำคัญเพื่อให้ได้งานที่มีคุณภาพสูง ตั้งแต่ถังชุบแบบครบวงจรที่ควบคุมทั้งอุณหภูมิและความเข้มข้น ไปจนถึงเรคติไฟเออร์ที่แปลงกระแสไฟให้เสถียร, ทุกชิ้นส่วนมีบทบาทสำคัญ. เครื่องเฝ้าระวัง pH/อุณหภูมิ ช่วยให้เราปรับแก้สถานการณ์ได้ทันท่วงที ขณะที่เครื่องวัดความหนาฟิล์ม ทำให้มั่นใจว่าชิ้นงานได้มาตรฐาน นอกจากนี้ชุดจิ๊กยังช่วยจัดวางชิ้นงานให้เคลือบได้ทั่วถึง เครื่องล้างอัลตราโซนิกก็ทำให้ผิวงานสะอาดหมดจด อุปกรณ์ทั้งหมดนี้ทำงานร่วมกันเพื่อควบคุมทุกปัจจัยในการผลิตให้ได้ผลงานที่แม่นยำและสม่ำเสมอตามที่ต้องการ",
         cta:"ดูรายละเอียด →",
         footer_products:"หมวดผลิตภัณฑ์",
         footer_contact:"ติดต่อเรา",
